Revise content for prototyping and evaluation sections
Updated the document to include details about student-led sessions and evaluation criteria.

--- a/data6900_sp2026_v2.md
+++ b/data6900_sp2026_v2.md
@@ -94,6 +94,8 @@ Your grade is a reflection of the quality of work you would deliver to a client 
 
 **Part 2: Prototyping & Implementation (Weeks 7-14)**
 
+> *Sign up forms will be made available to the students prior to week 7.*
+
 *   **Week 7: Student-Led Session 1: Setting Up Your Prototyping Environment**
     *   Topics: Cloud vs. Self-Hosting; Local n8n Setup & Configuration.
 
@@ -132,6 +134,7 @@ Detailed rubrics will be provided for all major assignments. An example for the 
 | **Technical Accuracy (40%)** | Concepts are explained flawlessly and with depth. Demo is perfectly executed. The team confidently and correctly answers all peer questions. | Concepts are explained correctly with only minor simplifications. Demo works as intended. The team answers most questions well. | Core concepts are correct, but some key details are fuzzy or slightly inaccurate. Demo has minor glitches but achieves its goal. Some questions are answered incorrectly. | There are significant errors in the technical explanation. Demo fails or does not illustrate the intended concept. The team is unable to answer most questions. |
 | **Pedagogical Effectiveness (40%)** | The presentation is logically structured to maximize learning. Complex ideas are skillfully broken down. The demo is the perfect example for the concept. | The presentation has a clear, logical structure. The demo is relevant and helpful. The session connects the "how" (the skill) to the "why" (its use in the project). | The presentation structure is present but could be clearer. The demo is functional but a better example could have been chosen. Pacing is inconsistent. | The presentation is disorganized and hard to follow. The demo is confusing or disconnected from the core topic. The session does not facilitate peer learning. |
 | **Preparation & Professionalism (20%)** | The presentation is well-rehearsed and delivered with confidence. Slides are professional, clear, and error-free. The team works together seamlessly and manages time perfectly. | The presentation is clearly rehearsed. Slides are well-designed with few to no errors. The team coordinates their efforts effectively. Time management is good. | The presentation feels under-rehearsed. Slides are functional but may be cluttered or contain errors. Coordination between team members is clunky. | The presentation is disorganized and read from notes. Slides are sloppy or unprofessional. Poor time management and lack of team coordination. |
+
 *A separate, simplified form will be used for Peer Evaluations.*
 
 ---
