--- a/data6900_sp2026_v2.md
+++ b/data6900_sp2026_v2.md
@@ -41,6 +41,18 @@ This course uses a hands-on, project-based approach in a **flipped classroom** m
 *   **In-Class:** Class time is a **Consulting Workshop**. You will work in your project teams, applying the concepts from the lectures to your ongoing project. The instructor will act as a senior consultant, conducting "Consulting Rounds" with each team to provide personalized coaching, feedback, and occasional "Scenario Injections" to test your adaptability.
 *   **Student-Led Learning:** In the second half of the course, teams will take turns leading technical presentations, teaching their peers key skills in the n8n automation platform.
 
+**Logistics for Student-Led Sessions:**
+Teams will sign up for their presentation topics and dates during Week 3 of the course via a shared sign-up sheet. To ensure you are fully prepared to teach your peers, a **mandatory 15-minute coaching session** via instructor's **Office Hours** is **required** for the presenting team during the week leading up to your session. In this meeting, we will review your content for technical accuracy, refine your explanations for clarity, and practice your live demonstration.
+
+---
+
+#### **Tools & Technology Requirements**
+Please ensure you have access to the following tools for this course. A consolidated list is provided here for your convenience.
+
+*   **Automation Platform (n8n):** This is our primary tool for Part 2. We will have a student-led session on setup. You can start by creating a free account on **[n8n.io Cloud](https://n8n.io/)** or by reviewing the **[n8n Desktop App](https://n8n.io/desktop-app/)** for local installation.
+*   **LLM API Access:** For prototyping, you will need access to a major Large Language Model via an API. You should create a developer account with at least one of the following: **[OpenAI (ChatGPT)](https://platform.openai.com/signup)**, **[Anthropic (Claude)](https://console.anthropic.com/)**, or **[Google (Gemini)](https://aistudio.google.com/)**. Please be aware that using these APIs is not free and will likely require you to place a credit card on file for billing. Usage costs for this course are expected to be minimal (typically less than a few dollars).
+*   **Diagramming (Mermaid):** We will use Mermaid syntax for our workflow diagrams. No installation is required; we will use free online tools like the **[Mermaid Live Editor](https://mermaid.live/)**.
+
 ---
 
 ## **Grading Plan**
@@ -128,7 +140,7 @@ Your grade is a reflection of the quality of work you would deliver to a client 
 ---
 
 ## **Grading Rubrics**
-Below are the rubrics for the major components of the Course Project Portfolio.
+Below are the rubrics for the major graded components.
 
 **Milestone 1: Process Analysis (10%)**
 | Criteria | Excellent (4 pts) | Good (3 pts) | Satisfactory (2 pts) | Needs Improvement (1 pt) |
@@ -161,16 +173,21 @@ Below are the rubrics for the major components of the Course Project Portfolio.
 | **Prototype Demo (The "How")** | The 15-minute demo is smooth, effective, and clearly demonstrates how the prototype solves the specific business pain points identified in the pitch. | The demo is functional and successfully showcases the core features of the n8n workflow. | The demo is functional but may have minor technical glitches, or the connection between the demo and the business problem is unclear. | The demo fails to run, is confusing, or does not demonstrate the core value of the solution. |
 | **Q&A / Professionalism (The "So What?")**| The team handles the 20-minute Q&A with exceptional poise and confidence, providing thoughtful, strategic, and honest answers that demonstrate deep mastery of their project. | The team answers questions accurately and professionally, demonstrating a solid understanding of their solution and its implications. | The team can answer most questions but may struggle with challenging or strategic inquiries. Answers may be purely technical or slightly defensive. | The team is unable to answer key questions, becomes defensive, or demonstrates a superficial understanding of their project. |
 
-An example for the Student-Led Technical Presentation is provided below.
-
-**Instructor Rubric: Student-Led Technical Presentation (Contributes 8%)**
-| Criteria (Weight) | Excellent (4 pts) | Good (3 pts) | Satisfactory (2 pts) | Needs Improvement (1 pt) |
-| :--- | :--- | :--- | :--- | :--- |
-| **Technical Accuracy (40%)** | Concepts are explained flawlessly and with depth. Demo is perfectly executed. The team confidently and correctly answers all peer questions. | Concepts are explained correctly with only minor simplifications. Demo works as intended. The team answers most questions well. | Core concepts are correct, but some key details are fuzzy or slightly inaccurate. Demo has minor glitches but achieves its goal. Some questions are answered incorrectly. | There are significant errors in the technical explanation. Demo fails or does not illustrate the intended concept. The team is unable to answer most questions. |
-| **Pedagogical Effectiveness (40%)** | The presentation is logically structured to maximize learning. Complex ideas are skillfully broken down. The demo is the perfect example for the concept. | The presentation has a clear, logical structure. The demo is relevant and helpful. The session connects the "how" (the skill) to the "why" (its use in the project). | The presentation structure is present but could be clearer. The demo is functional but a better example could have been chosen. Pacing is inconsistent. | The presentation is disorganized and hard to follow. The demo is confusing or disconnected from the core topic. The session does not facilitate peer learning. |
-| **Preparation & Professionalism (20%)** | The presentation is well-rehearsed and delivered with confidence. Slides are professional, clear, and error-free. The team works together seamlessly and manages time perfectly. | The presentation is clearly rehearsed. Slides are well-designed with few to no errors. The team coordinates their efforts effectively. Time management is good. | The presentation feels under-rehearsed. Slides are functional but may be cluttered or contain errors. Coordination between team members is clunky. | The presentation is disorganized and read from notes. Slides are sloppy or unprofessional. Poor time management and lack of team coordination. |
-
-*A separate, simplified form will be used for Peer Evaluations.*
+**Student-Led Technical Presentation (20%)**
+*   **Instructor Rubric (Contributes 8%):**
+    | Criteria (Weight) | Excellent (4 pts) | Good (3 pts) | Satisfactory (2 pts) | Needs Improvement (1 pt) |
+    | :--- | :--- | :--- | :--- | :--- |
+    | **Technical Accuracy (40%)** | Concepts are explained flawlessly and with depth. Demo is perfectly executed. The team confidently and correctly answers all peer questions. | Concepts are explained correctly with only minor simplifications. Demo works as intended. The team answers most questions well. | Core concepts are correct, but some key details are fuzzy or slightly inaccurate. Demo has minor glitches but achieves its goal. Some questions are answered incorrectly. | There are significant errors in the technical explanation. Demo fails or does not illustrate the intended concept. The team is unable to answer most questions. |
+    | **Pedagogical Effectiveness (40%)** | The presentation is logically structured to maximize learning. Complex ideas are skillfully broken down. The demo is the perfect example for the concept. | The presentation has a clear, logical structure. The demo is relevant and helpful. The session connects the "how" (the skill) to the "why" (its use in the project). | The presentation structure is present but could be clearer. The demo is functional but a better example could have been chosen. Pacing is inconsistent. | The presentation is disorganized and hard to follow. The demo is confusing or disconnected from the core topic. The session does not facilitate peer learning. |
+    | **Preparation & Professionalism (20%)** | The presentation is well-rehearsed and delivered with confidence. Slides are professional, clear, and error-free. The team works together seamlessly and manages time perfectly. | The presentation is clearly rehearsed. Slides are well-designed with few to no errors. The team coordinates their efforts effectively. Time management is good. | The presentation feels under-rehearsed. Slides are functional but may be cluttered or contain errors. Coordination between team members is clunky. | The presentation is disorganized and read from notes. Slides are sloppy or unprofessional. Poor time management and lack of team coordination. |
+*   **Peer Evaluation Form (Contributes 12%):**
+    After each student-led presentation, all non-presenting students will anonymously complete the following form. Your grade for this portion is the average score from all peer submissions.
+    *   **Instructions:** Please rate the presentation on the following criteria from 1 (Needs Improvement) to 5 (Excellent).
+    *   **Criterion 1: Clarity of Explanation:** Were the technical concepts explained in a way that was easy to understand, even if you were new to the topic?
+    *   **Criterion 2: Quality of Demonstration:** Was the live demo clear, relevant, and effective at illustrating the concept? Did it show *why* this skill is useful for our course project?
+    *   **Criterion 3: Overall Engagement:** Was the presentation delivered in an engaging and professional manner? Did the presenters effectively answer questions from the audience?
+    *   **Qualitative Feedback 1:** What was the single most valuable part of this presentation?
+    *   **Qualitative Feedback 2:** What is one piece of constructive feedback for improvement?
 
 ---
 
