Change header level for course title and syllabus

--- a/data6900_sp2026_v2.md
+++ b/data6900_sp2026_v2.md
@@ -1,5 +1,6 @@
 # **DATA 6900: Contemporary Topics Seminar**
-### **AI-Powered Business Process Automation (AIBPA)**
+## **AI-Powered Business Process Automation (AIBPA)**
+## COURSE SYLLABUS
 ---
 
 **Course Information**
