Change header level for Tools & Technology Requirements

--- a/data6900_sp2026_v2.md
+++ b/data6900_sp2026_v2.md
@@ -47,7 +47,7 @@ Teams will sign up for their presentation topics and dates during Week 3 of the 
 
 ---
 
-#### **Tools & Technology Requirements**
+## **Tools & Technology Requirements**
 Please ensure you have access to the following tools for this course. A consolidated list is provided here for your convenience.
 
 *   **Automation Platform (n8n):** This is our primary tool for Part 2. We will have a student-led session on setup. You can start by creating a free account on **[n8n.io Cloud](https://n8n.io/)** or by reviewing the **[n8n Desktop App](https://n8n.io/desktop-app/)** for local installation.
