Add table of contents and update course policies

--- a/data6900_sp2026_v2.md
+++ b/data6900_sp2026_v2.md
@@ -3,6 +3,20 @@
 ## COURSE SYLLABUS
 ---
 
+### **Table of Contents**
+*   [Course Information](#course-information)
+*   [Course Description](#course-description)
+*   [Course Philosophy: The Consultant & The Teacher](#course-philosophy-the-consultant--the-teacher)
+*   [Learning Objectives](#learning-objectives)
+*   [Course Format & Methodology](#course-format--methodology)
+*   [Tools & Technology Requirements](#tools--technology-requirements)
+*   [Grading Plan](#grading-plan)
+*   [Grading Rubrics](#grading-rubrics)
+*   [Course Schedule](#course-schedule)
+*   [Course Policies](#course-policies)
+
+---
+
 **Course Information**
 *   **Semester:** Spring 2026
 *   **Instructor:** Dr. Jie Tao
@@ -192,7 +206,7 @@ Below are the rubrics for the major graded components.
 
 ---
 
-#### **Course Policies**
+## **Course Policies**
 *   **Late Submissions:** In a professional consulting environment, deadlines are critical. **NO LATE SUBMISSIONS ARE ALLOWED** unless due to *unforeseen circumstances*.
 *   **Academic Integrity:** All work submitted must be the original work of the team. While the use of GenAI as a co-pilot is encouraged, all final deliverables must be reviewed, edited, and owned by the students. Standard university policies on academic integrity apply.
 *   **Accommodations:** Students with disabilities who may need accommodations in this class are encouraged to contact the university's disability support services office as soon as possible to ensure that such accommodations are arranged in a timely fashion.
