Change header format for course information section

--- a/data6900_sp2026_v2.md
+++ b/data6900_sp2026_v2.md
@@ -17,7 +17,7 @@
 
 ---
 
-**Course Information**
+## **Course Information**
 *   **Semester:** Spring 2026
 *   **Instructor:** Dr. Jie Tao
 *   **Contact:** Slack Course Channel/DM - **No email will be responded**
